plugins/security/rate-limiting/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limiting-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: rate-limiting-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /rate-limiting
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
